# nucleus-job-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md  gdk-config.json  recipe.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.opencode/: PLAN.md
.opencode/skills/nucleus-job-plugin-dev/: SKILL.md
.opencode/skills/nucleus-job-plugin-dev/reference/: JOBS_PROTOCOL.md
docs/: JOBS_PROTOCOL.md
examples/: local_run.rs
examples/docker/: .env.example  .gitignore  README.md  docker-compose.yml  run-demo.sh  teardown.sh
examples/docker/greengrass-v2-credentials/: credentials.example
greengrass/: build-custom.sh  deploy.sh  recipe.json
greengrass/files/: setup.sh
greengrass/files/handlers/: README.md
scripts/: check.sh
src/: config.rs  error.rs  handler.rs  lib.rs  main.rs
src/jobs/: engine.rs  mod.rs  model.rs  topics.rs
src/transport/: ipc.rs  mock.rs  mod.rs  mqtt.rs
tests/: engine.rs  handler.rs
