[package]
name = "nucleus-job-plugin"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0 OR MIT"
description = "Unofficial Rust runner for AWS IoT Jobs on a Greengrass device (job execution only). Not affiliated with Amazon."
repository = "https://github.com/eduelias/nucleus-job-plugin"
readme = "README.md"
keywords = ["iot", "jobs", "greengrass", "mqtt", "aws"]
categories = ["embedded", "network-programming"]
exclude = [".github/", ".opencode/", "greengrass/", "scripts/"]

[features]
# The core engine/model/handler are transport-agnostic and always available.
# Transports are opt-in so the crate builds with no network deps by default.
default = ["mqtt"]
# Direct MQTT transport to AWS IoT Core via the device certificate (rumqttc + rustls).
mqtt = ["dep:rumqttc"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"

# Optional transports.
rumqttc = { version = "0.24", optional = true }

[target.'cfg(unix)'.dependencies]
# Resolve `runAsUser` names to uid/gid for privilege drop on Linux devices.
uzers = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-util", "test-util"] }
tempfile = "3"

[[bin]]
name = "nucleus-job-plugin"
path = "src/main.rs"
